force-app/main/default/objects/AI_Response__c/AI_Response__c.object-meta.xml
<CustomObject>
    <label>Security Audit</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Audit #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>