force-app/main/default/objects/AI_Response__c/fields/AI_Callout_End_Time__c.field-meta.xml
<CustomField>
    <fullName>AI_Callout_End_Time__c</fullName>
    <label>AI Callout End Time</label>
    <type>DateTime</type>
</CustomField>