force-app/main/default/objects/AI_Response__c/fields/AI_Canvas_Template_Component__c.field-meta.xml
<CustomField>
    <fullName>AI_Canvas_Template_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canvas Template Component</label>
    <referenceTo>AI_Canvas_Template_Component__c</referenceTo>
    <relationshipLabel>Security Audits</relationshipLabel>
    <relationshipName>Security_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>