force-app/main/default/objects/AI_Response__c/fields/AI_Parent_Response__c.field-meta.xml
<CustomField>
    <fullName>AI_Parent_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Parent Response</label>
    <referenceTo>AI_Response__c</referenceTo>
    <relationshipLabel>Security Audits (AI Parent Response)</relationshipLabel>
    <relationshipName>Parent_Security_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>