force-app/main/default/objects/AI_Response__c/fields/AI_Processed_Data_No_PII__c.field-meta.xml
<CustomField>
    <fullName>AI_Processed_Data_No_PII__c</fullName>
    <inlineHelpText>Response after data Deidentification</inlineHelpText>
    <label>AI Processed Data(No PII)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>