force-app/main/default/objects/AI_Response__c/fields/AI_Processed_Data_PII_Added__c.field-meta.xml
<CustomField>
    <fullName>AI_Processed_Data_PII_Added__c</fullName>
    <inlineHelpText>Response from AI</inlineHelpText>
    <label>AI Processed Data(PII Added)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>