force-app/main/default/objects/AI_Response__c/fields/AI_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>AI_Processing_Time__c</fullName>
    <formula>ROUND(( AI_Callout_End_Time__c -  AI_Callout_Start_Time__c )* 24 * 60*60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Time (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>