force-app/main/default/objects/AI_Response__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Prompt that is used</inlineHelpText>
    <label>AI Prompt</label>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipName>AI_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>