force-app/main/default/objects/AI_Response__c/fields/AI_Security_Audit__c.field-meta.xml
<CustomField>
    <fullName>AI_Security_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security Audit</label>
    <referenceTo>AI_Response__c</referenceTo>
    <relationshipLabel>Security Audits (Security Audit)</relationshipLabel>
    <relationshipName>Security_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>