force-app/main/default/objects/AI_Response__c/fields/Bot_Configuration_Detail__c.field-meta.xml
<CustomField>
    <fullName>Bot_Configuration_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bot Configuration Detail</label>
    <referenceTo>Bot_Configuration_Detail__c</referenceTo>
    <relationshipLabel>Security Audits</relationshipLabel>
    <relationshipName>Security_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>