force-app/main/default/objects/AI_Response__c/fields/Data_Decrypt_PII_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Decrypt_PII_Key__c</fullName>
    <label>Data (Decrypt PII Key)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>