force-app/main/default/objects/AI_Response__c/fields/Data_Original__c.field-meta.xml
<CustomField>
    <fullName>Data_Original__c</fullName>
    <description>Extracted from Portability JSON</description>
    <inlineHelpText>Data as extracted from Salesforce</inlineHelpText>
    <label>Data(Original)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>