force-app/main/default/objects/AI_Response__c/fields/Data_PII_Removed__c.field-meta.xml
<CustomField>
    <fullName>Data_PII_Removed__c</fullName>
    <inlineHelpText>Data that has been processed to remove PII.
This data was sent to ChatGPT.</inlineHelpText>
    <label>Data(PII Removed)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>