force-app/main/default/objects/AI_Response__c/fields/Extracted_Data__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Data__c</fullName>
    <label>Extracted Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>