force-app/main/default/objects/AI_Response__c/fields/Files_Id__c.field-meta.xml
<CustomField>
    <fullName>Files_Id__c</fullName>
    <label>Files Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>