force-app/main/default/objects/AI_Response__c/fields/GPT_Config__c.field-meta.xml
<CustomField>
    <fullName>GPT_Config__c</fullName>
    <inlineHelpText>What configuration is used.</inlineHelpText>
    <label>GPT Config</label>
    <length>50</length>
    <type>Text</type>
</CustomField>