force-app/main/default/objects/AI_Response__c/fields/Is_Canvas_Response__c.field-meta.xml
<CustomField>
    <fullName>Is_Canvas_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Canvas Response</label>
    <type>Checkbox</type>
</CustomField>