force-app/main/default/objects/AI_Response__c/fields/Parent_AI_Response__c.field-meta.xml
<CustomField>
    <fullName>Parent_AI_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent AI Response</label>
    <referenceTo>AI_Response__c</referenceTo>
    <relationshipName>AI_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>