force-app/main/default/objects/AI_Response__c/fields/Prompt_Command__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Command__c</fullName>
    <inlineHelpText>Prompt command sent to AI.</inlineHelpText>
    <label>Prompt Command</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>