force-app/main/default/objects/AI_Response__c/fields/Prompt_Element_Details__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Element_Details__c</fullName>
    <label>Prompt Element Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>