force-app/main/default/objects/AI_Response__c/fields/Prompt_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt Scheduler</label>
    <referenceTo>AI_Prompt_Scheduler__c</referenceTo>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>