force-app/main/default/objects/AI_Response__c/fields/Prompt_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Tokens__c</fullName>
    <inlineHelpText>Initial input text  provided to the AI model to generate a response.</inlineHelpText>
    <label>Prompt Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>