force-app/main/default/objects/AI_Response__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <label>Prompt Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>