force-app/main/default/objects/AI_Response__c/fields/Scheduled_Run__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Run</label>
    <referenceTo>AI_Scheduled_Run__c</referenceTo>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>