force-app/main/default/objects/AI_Response__c/fields/Session_Expired__c.field-meta.xml
<CustomField>
    <fullName>Session_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session Expired</label>
    <type>Checkbox</type>
</CustomField>