force-app/main/default/objects/AI_Response__c/fields/Time_Estimate_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_Estimate_Seconds__c</fullName>
    <description>Time it would take for the user to process all the information in case AI is not used.</description>
    <formula>Prompt_Tokens__c/8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Estimate(Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>