force-app/main/default/objects/AI_Response__c/fields/Time_Saved_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_Saved_Seconds__c</fullName>
    <description>Saving is calculated based on 8 tokens are read per second.</description>
    <formula>If(Prompt_Tokens__c-Completion_Tokens__c &gt;0,CEILING((Prompt_Tokens__c-Completion_Tokens__c)/IF(NOT(ISBLANK(AI_Prompt__c)) &amp;&amp; AI_Prompt__r.Time_Saved_Coefficient__c &gt; 0, AI_Prompt__r.Time_Saved_Coefficient__c, 8)),CEILING((Completion_Tokens__c-Prompt_Tokens__c)/IF(NOT(ISBLANK(AI_Prompt__c)) &amp;&amp; AI_Prompt__r.Time_Saved_Coefficient__c &gt; 0, AI_Prompt__r.Time_Saved_Coefficient__c, 8)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Saved(Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>