force-app/main/default/objects/AI_Response__c/fields/User_Context_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Context_Id__c</fullName>
    <label>User Context Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>