force-app/main/default/objects/AI_Response__c/fields/Vector_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Vector_Store_Id__c</fullName>
    <label>Vector Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>